<resources>
    <string name="app_name">ERestaurant</string>

    <string name="ok_label">OK</string>
    <string name="cancel_label">Cancel</string>
    <string name="cancel_label_c">CANCEL</string>

    <string name="action_me_label">Me</string>
    <string name="action_settings_label">Settings</string>
    <string name="search_label">Search</string>
    <string name="action_logout_label">Log out</string>

    <string name="loading_title">Loading . . .</string>

    <string name="username_hint_label">Username</string>
    <string name="password_hint_label">Password</string>
    <string name="login_btn_label">LOGIN</string>

    <string name="menu_items_btn_label">Menu Items</string>
    <string name="meals_btn_label">Meals</string>
    <string name="addons_btn_label">Add-Ons</string>

    <string name="new_order_btn_label">New</string>
    <string name="in_progress_btn_label">In Progress</string>
    <string name="completed_orders_btn_label">Completed</string>
    <string name="canceled_orders_btn_label">Canceled</string>

    <string name="active_table_heading_label">ACTIVE TABLES</string>
    <string name="active_table_bill_label">Bill</string>
    <string name="active_table_add_item_label">Add Item</string>
    
    <string name="ready_item_label">READY ITEMS</string>

    <string name="order_label">ORDER</string>

    <string name="current_order_label">CURRENT ORDER</string>
    <string name="table_name_label">Table No Type Here</string>
    <string name="add_item_label">ADD ITEMS</string>
    <string name="confirm_order_btn_label">Confirm Order</string>

    <string name="item_title_label">ITEM TITLE</string>
    <string name="item_price_label">ITEM PRICE -</string>

    <string name="order_bill_label">ORDER BILL</string>
    <string name="print_label">PRINT</string>

    <string name="ingredient_label">Ingredients</string>
    <string name="type_here_label">Type Here</string>
    <string name="addons_label">Addons</string>
    <string name="cooking_label">Cooking</string>
    <string name="no_btn_label">NO</string>
    <string name="low_btn_label">LOW</string>
    <string name="normal_btn_label">NORMAL</string>
    <string name="high_btn_label">HIGH</string>
    <string name="extra_btn_label">EXTRA</string>
</resources>
