<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey400"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/red400"
        android:id="@+id/createOrderLinearLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_items_btn_label"
            android:textSize="12dp"
            android:id="@+id/menuItemsBtn"
            android:textColor="@color/white"
            style="@android:style/Holo.ButtonBar" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meals_btn_label"
            android:textSize="12dp"
            android:id="@+id/mealsBtn"
            android:textColor="@color/white"
            style="@android:style/Holo.ButtonBar" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addons_btn_label"
            android:textSize="12dp"
            android:id="@+id/addOnsBtn"
            android:textColor="@color/white"
            style="@android:style/Holo.ButtonBar" />
    </LinearLayout>

    <GridView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/menuItemGridView"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:columnWidth="100dp"
        android:gravity="center"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:layout_below="@+id/createOrderLinearLayout" />
</RelativeLayout>