<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_margin="10dp"
        android:background="@drawable/round_corner_heading"
        android:layout_width="fill_parent"
        android:layout_height="220dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/current_order_label"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView" />

        <RelativeLayout
            android:id="@+id/selectedItemsRelativeLayout"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@color/splash_black"
                android:gravity="center_vertical|right"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/currentOrderTableNameEditText"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.00"
                    android:background="@color/splash_black"
                    android:hint="@string/table_name_label"
                    android:paddingLeft="10dp"
                    android:textColorHint="@color/grey400"
                    android:textColor="@color/grey200"
                    android:textSize="25dp" />

                <ImageButton
                    android:id="@+id/currentOrderTableSaveImageButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/splash_black"
                    android:src="@drawable/save_order_table" />
            </LinearLayout>

        </RelativeLayout>

        <ImageButton
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/navCurrentOrderBackImageButton"
            android:src="@drawable/nav_back"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:id="@+id/addItemLinearLayout"
            android:orientation="horizontal"
            android:layout_width="105dp"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:text="@string/add_item_label"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="@color/grey600"
                android:gravity="center"
                android:layout_width="55dp"
                android:layout_height="45dp" />

            <ImageView
                android:layout_marginLeft="5dp"
                android:src="@drawable/add_order_item"
                android:layout_width="45dp"
                android:layout_height="45dp" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_order_btn_label"
            android:id="@+id/confirmOrderButton"
            android:background="@drawable/boarder_btn"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/navCurrentOrderBackImageButton"
            android:layout_alignStart="@+id/navCurrentOrderBackImageButton"
            android:layout_toLeftOf="@+id/textView"
            android:layout_toStartOf="@+id/textView" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/cancel_label"
            android:id="@+id/cancelOrderButton"
            android:background="@drawable/boarder_btn"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/confirmOrderButton" />

    </RelativeLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/currentOrderItemListView"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>